edit post validations and about me wip

--- a/react-app/src/components/EditPost/EditPost.css
+++ b/react-app/src/components/EditPost/EditPost.css
@@ -51,3 +51,13 @@
     opacity: .1;
     background: linear-gradient(black, transparent);
 }
+
+#error-holder {
+    position: absolute;
+    bottom: 10px;
+}
+
+#post-edit-error {
+    color: #FF7F7F;
+    top: 0;
+}
