--- a/react-app/src/components/AboutMe/AboutMe.css
+++ b/react-app/src/components/AboutMe/AboutMe.css
@@ -748,7 +748,7 @@ h1 {
 	flex-direction: column;
 	float: left;
 	justify-content: center;
-	min-height: 100vh;
+	min-height: 100%;
 	padding: 1em;
 	width: 100%;
 }
@@ -947,3 +947,48 @@ h1 {
 	color: white;
 	background: black;
 }
+
+.center {
+	color: rgba(255,0,0,0.1);
+	font-size: 100px;
+	text-transform: uppercase;
+	font-weight: 700;
+	background-size:auto;
+	background-image: url(https://i.imgur.com/vdPsMZM.png);
+	-webkit-background-clip: text;
+	animation: background-text-animation 15s linear infinite;
+
+  }
+
+.hm {
+	text-shadow: 0px 3px 0px transparent,
+                 0px 14px 10px rgba(0,0,0,0.15),
+                 0px 24px 2px rgba(0,0,0,0.1),
+                 0px 34px 30px rgba(0,0,0,0.1);
+}
+
+  @keyframes background-text-animation {
+	0%{
+	  background-position: left 0px top 50%;
+	}
+	50%{
+	  background-position: left 1500px top 50%;
+	}
+	100%{
+	  background-position: left 0px top 50%;
+	}
+  }
+
+  .play-pause-pos {
+	position: absolute;
+	top: 0;
+	right: 0;
+  }
+
+  #play-button {
+	height: 15px;
+  }
+
+  #pause-button {
+	height: 15px;
+  }
